# ChaosWalker

./: .gitignore  CHANGELOG.md  CHECKPOINT_SYSTEM.md  Cargo.toml  DEPLOYMENT_GUIDE.md  HYBRID_MODE_GUIDE.md  LENGTH_FILTER_KERNEL.cu  LENGTH_OPTIMIZATION.md  MIGRATION_v1.2.md  MODE_COMPARISON.md  QUICKSTART.md  README.md  RELEASE_v1.0.md  RELEASE_v1.2.md  TEACHABLE_MOMENT.md  build.rs  chaos_state.txt  config.toml  create_deploy_package.sh  dashboard_simple.py  demo_checkpoint.sh  find_early_passwords.py  find_test_password.py  show_result.sh  test_complete_kernel  test_complete_kernel.cu  test_kernel_debug.py  test_mapping.py  test_password_gen.cu  test_smart_mapper.py  verify_sha256.py
chaos_walker_deploy/: chaos_walker  decode_result.py  flask_dashboard.py  requirements.txt  run_dashboard.sh
docs/: ALERT_TEST.md  ANSWER_8PLUS_STRATEGY.md  ARCHITECTURE.md  BUG_FIX_INDEX_ZERO.md  CHECKPOINT_SUMMARY.md  DASHBOARD_FIXES.md  DASHBOARD_GUIDE.md  EXECUTIVE_SUMMARY.md  FINAL_SOLUTION.md  MARKETING_REVIEW_v1.2.md  POPUP_FEATURE.md  POPUP_FIX.md  PRACTICAL_LENGTH_STRATEGY.md  QUICK_DEPLOY.md  QUICK_TEST.md  README_DASHBOARD.md  SCIENTIFIC_REPORT.md  SMART_MAPPER_DESIGN.md  VERSION_1.0_SUMMARY.md  sience.md
kernels/: chaos_worker.cu  chaos_worker.ptx  chaos_worker_linear.cu  chaos_worker_random.cu
release_v1.1.0/: CHANGELOG.md  README.md  chaos_walker  config.toml  smart_mapper.py
src/: main.rs
tests/: test_alert_simple.py  test_checkpoint.sh  test_dashboard_simple.py  test_gpu_simple.sh  test_password_gen  test_sha256_minimal  test_sha256_minimal.cu
(+2 files in other folders)
