[package]
name = "chaos_walker"
version = "1.0.0"
edition = "2021"
authors = ["J.Ekrami <ekrami@gmail.com>"]
description = "GPU-accelerated password cracker with Feistel network and Smart Mapper"
license = "MIT"
repository = "https://github.com/jekrami/ChaosWalker"

[dependencies]
# We use 0.18.2 which SUPPORTS 'cuda-version-from-build-system'
cudarc = { version = "0.18.2", features = ["cuda-version-from-build-system", "driver", "nvrtc"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
chrono = "0.4"

[build-dependencies]
cc = "1.0"